# sir-project-group-4

./: .gitignore  README.md  Run Redis Server - Fran.txt  pyproject.toml  uppercut
demos/desktop/: demo_desktop_dialogflow_cx.py  demo_desktop_microphone_dialogflow.py
demos/nao/: demo_nao_dialogflow_cx.py  demo_nao_leds.py  demo_nao_motion.py  demo_nao_motion2.py  demo_nao_motion_recorder.py  demo_nao_talk.py  demo_nao_tracker.py  demo_nao_walk.py
demos/performance_scripts/: DialogFlowIntentDetection  DialogFlowIntentDetection.py  TiredFlow.py
